ffmpeg: Allow overriding ffservers input

Fixes Ticket1970

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>